--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,41 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+/N-Queens Puzzle SS.psd
+/offsetFilter_c17-Queens SolSpread Dom3center_overlap-free.png
+/N-Queens spreading edit01.png
+/N-Queens spreading edit01.html
+/N-Queens SolSpread Dom3_overlap-free.png
+/N-Queens SolSpread Dom3_overlap-free.jpg
+/N-Queens SolSpread Dom3Center_overlap-free.png
+/N-Queens SolSpread Dom3Center_overlap-free.jpg
+/N-Queens density spreading.png
+/draft_14-Queens solutions spreading.png
+/c17-Queens SolSpread Dom3center_overlap-free.png
+/c16-Queens SolSpread Dom3center_overlap-free.png
+/c15-Queens SolSpread Dom3center_overlap-free.png
+/c14-Queens SolSpread Dom3center_overlap-free.png
+/c13-Queens SolSpread Dom3center_overlap-free.png
+/17-Queens SolSpread Dom3_overlap-free.png
+/16-Queens SolSpread Dom3_overlap-free.png
+/15-Queens SolSpread Dom3_overlap-free.png
+/14-Queens SolSpread Dom3_overlap-free.png
+/13-Queens SolSpread Dom3_overlap-free.png
+/12-Queens SolSpread Dom3_overlap-free.png
+/11-Queens SolSpread Dom3_overlap-free.png
+/10-Queens SolSpread Dom3_overlap-free.png
+/09-Queens SolSpread Dom3_overlap-free.png
+/08-Queens SolSpread Dom3_overlap-free.png
+/www_NQ0Ne.jpg
+/w17-Queens SolSpread Dom3_overlap-free (w2786).png
+/Solutions_w1000.png
+/Solutions_pano_dist.png
+/Solutions_pano_dist.jpg
+/Solutions_pano01.png
+/Solutions_pano.png
+/Solutions_pano.jpg
+/QPS_question.txt
+/QPS_DamDetect_01.png
+/QPS_3000.png
+/PLOTs_note_01.txt
+/PLOTs_note.txt
